--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Document</title>
 
   <style>
-    #banner-wrapper {
+/*     #banner-wrapper {
       background: rgb(0,173,177);
       background: linear-gradient(90deg, rgba(0,173,177,1) 0%, rgba(0,173,177,1) 30%, rgba(12,78,130,1) 75%, rgba(12,78,130,1) 100%);
-    }
+    } */
     /* Extra small devices (phones, 600px and down) */
     @media only screen and (max-width: 600px) {
       #banner-image {
