--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div id="banner-wrapper">
-    <div id="banner-image"></div>
+    <a href="https://www.tiq.com.sg/promotion/invest-save-campaign/?utm_source=feefo&utm_medium=banner&utm_campaign=savingsbundlenov2021"><div id="banner-image"></div></a>
   </div>
 </body>
 </html>
