--- a/index-full-width.html
+++ b/index-full-width.html
@@ -9,7 +9,7 @@
   <style>
     .banner-image {
       display: none;
-      width: 100%;
+      height: 100%;
     }
 
     /* Extra small devices (phones, 600px and down) */
