--- a/index-full-width.html
+++ b/index-full-width.html
@@ -9,7 +9,7 @@
   <style>
     .banner-image {
       display: none;
-      height: 100%;
+      width: 100%;
     }
 
     /* Extra small devices (phones, 600px and down) */
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <div id="banner">
+  <div id="banner-wrapper">
     <img class="banner-image" id="banner-sm" src="280x152.jpg" />
     <img class="banner-image" id="banner-md" src="707x118.jpg" />
     <img class="banner-image" id="banner-lg" src="880x118.jpg" />
