--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Document</title>
 
   <style>
+    .banner-wrapper > a {
+      display: inline-block;
+    }
+    
     .banner-image {
       display: none;
       height: 100%;
