--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 
   <style>
-    .banner-wrapper > a {
+    #banner-wrapper > a {
       display: inline-block;
     }
     
