--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
   <center id="banner-wrapper">
-    <a href="https://www.tiq.com.sg/promotion/invest-save-campaign/?utm_source=feefo&utm_medium=banner&utm_campaign=savingsbundlenov2021">
+    <a target="_blank" href="https://www.tiq.com.sg/promotion/invest-save-campaign/?utm_source=feefo&utm_medium=banner&utm_campaign=savingsbundlenov2021">
       <img class="banner-image" id="banner-sm" src="280x152.jpg" />
       <img class="banner-image" id="banner-md" src="707x118.jpg" />
       <img class="banner-image" id="banner-lg" src="880x118.jpg" />
